# QUONX

./: App.css  App.tsx  CLAUDE.md  DEVELOPMENT_STATUS.md  README.md  dev.sh  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
ai_engine/: embeddings_service.py  inference_engine.py  main.py  model_manager.py  requirements.txt
components/: AIAgentPanel.tsx  CodeSnippet.tsx  ContextPanel.tsx  DebuggerPanel.tsx  DraggableWindow.tsx  Editor.tsx  FileExplorer.tsx  GitPanel.tsx  IndexingPanel.tsx  KnowledgeGraphVisualizer.tsx  LintingPanel.tsx  MemoryPanel.tsx  PluginManagerPanel.tsx  SettingsPanel.tsx  SwarmPanel.tsx  Terminal.tsx  icons.tsx
hooks/: useFileSystem.ts
models/: README.md
python_sidecar/: main.py  requirements.txt
services/: codebaseAnalyzer.ts  debuggerService.ts  geminiService.ts  gitService.ts  graphDB.ts  indexingService.ts  intentInferenceEngine.ts  lintingService.ts  localAIService.ts  memoryService.ts  pluginService.ts  swarmService.ts  tauriService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_engine.rs  file_watcher.rs  lib.rs  main.rs  model_manager.rs  project_manager.rs  python_sidecar.rs
